extends Control

#LEVELS MENU BUTTONS


func _on_back_pressed():
	get_tree().change_scene_to_file("res://SCENE/start_menu.tscn")

func _on_level_button_01_pressed():
	get_tree().change_scene_to_file("res://SCENE/level_1.tscn")

func _on_level_button_02_pressed():
	get_tree().change_scene_to_file("res://SCENE/level_2.tscn")

func _on_level_button_03_pressed():
	get_tree().change_scene_to_file("res://SCENE/level_3.tscn")

func _on_level_button_04_pressed():
	get_tree().change_scene_to_file("res://SCENE/level_4.tscn")

func _on_level_button_05_pressed():
	get_tree().change_scene_to_file("res://SCENE/level_5.tscn")

func _on_level_button_06_pressed():
	get_tree().change_scene_to_file("res://SCENE/level_6.tscn")

func _on_level_button_07_pressed():
	get_tree().change_scene_to_file("res://SCENE/level_7.tscn")

func _on_level_button_08_pressed():
	get_tree().change_scene_to_file("res://SCENE/level_8.tscn")

func _on_level_button_09_pressed():
	get_tree().change_scene_to_file("res://SCENE/level_9.tscn")

func _on_level_button_10_pressed():
	get_tree().change_scene_to_file("res://SCENE/level_10.tscn")
